datasource db {
  provider          = "postgresql"
  url               = env("DATABASE_URL")
  shadowDatabaseUrl = env("SHADOW_DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

enum StaffType {
  Profesional
  PracticasProfesionales
  ServicioSocial
  PersonalInterno
}

model User {
  id           String    @id @default(cuid())
  email        String    @unique
  passwordHash String
  role         String
  isSuperAdmin Boolean   @default(false)
  canManageAdmins Boolean @default(false)
  createdAt    DateTime  @default(now()) @db.Timestamptz(3)
  updatedAt    DateTime  @updatedAt @db.Timestamptz(3)

  doctor       Doctor?
  sessions     Session[]
}

model ClinicSettings {
  id        Int      @id @default(1)
  clinicName String?
  logoUrl   String?
  themePalette String @default("clinic")
  maxRooms  Int?
  maxDoctors Int?
  createdAt DateTime @default(now()) @db.Timestamptz(3)
  updatedAt DateTime @updatedAt @db.Timestamptz(3)
}


model Doctor {
  id          String   @id @default(cuid())
  displayName String
  specialty   String
  avatarUrl   String?
  degree      String?
  license     String?  @unique
  career      String?
  roleDescription String?
  staffType   StaffType @default(Profesional)
  userId      String   @unique
  createdAt   DateTime @default(now()) @db.Timestamptz(3)
  updatedAt   DateTime @updatedAt @db.Timestamptz(3)

  user        User     @relation(fields: [userId], references: [id])
  bookings    Booking[]
}

model Room {
  id        String   @id @default(cuid())
  name      String
  roomType  String   @default("General")
  createdAt DateTime @default(now()) @db.Timestamptz(3)
  updatedAt DateTime @updatedAt @db.Timestamptz(3)

  bookings  Booking[]
}

model Booking {
  id        String   @id @default(cuid())
  roomId    String
  doctorId  String?
  dateKey   String
  startAt   DateTime @db.Timestamptz(3)
  endAt     DateTime @db.Timestamptz(3)
  startMin  Int
  endMin    Int
  status    String
  createdAt DateTime @default(now()) @db.Timestamptz(3)
  updatedAt DateTime @updatedAt @db.Timestamptz(3)
  createdBy String?
  updatedBy String?

  room      Room    @relation(fields: [roomId], references: [id])
  doctor    Doctor? @relation(fields: [doctorId], references: [id], onDelete: SetNull)

  @@index([dateKey])
  @@index([roomId, dateKey])
  @@index([doctorId, dateKey])
}

model Session {
  id        String   @id @default(cuid())
  token     String   @unique
  userId    String
  expiresAt DateTime @db.Timestamptz(3)
  lastActiveAt DateTime @default(now()) @db.Timestamptz(3)
  createdAt DateTime @default(now()) @db.Timestamptz(3)

  user      User     @relation(fields: [userId], references: [id])
}
